--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_monetary.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_monetary.html
@@ -10,21 +10,21 @@
         {% csrf_token %}
         <div>
         <p>
-            Amount you are donating: ${{  form.amount }}
+            Amount you are donating: ${{ form.amount }}
             <span class="error_message">
-                {{ form.donation_type.error.as_text }}
+                {{ form.amount.errors.as_text }}
             </span>
         </p>
         <p>
-            Your Name: {{ form.donor_name }}
+            Your Name: {{ form.name }}
             <span class="error_message">
-                {{ form.donor_name.error.as_text }}
+                {{ form.name.errors.as_text }}
             </span>
         </p>
         <p>
-            Your Email address:{{ form.donor_email }}
+            Your Email address:{{ form.email }}
             <span class="error_message">
-                {{ form.donor_email.error.as_text }}
+                {{ form.email.errors.as_text }}
             </span>
         </div>
         <div id="SubmitButton">
