--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -13,26 +13,239 @@
     <form action="{% url 'private-form-intake-assessment' %}" method="post">
         {% csrf_token %}
         {{ formset.management_form }}
-        <h2>Number of Sidewalkers Required</h2>
-        <h3>Walking</h3>
+        <div id="general_information">
+            <h2>General Information</h2>
+            <div id="participant_name">
+                <p><strong>Participant Name</strong></p>
+                <p>
+                    {% for form, participant in formset_and_participants %}
+                        {{ participant }}:
+                         {{ form.participant_name }}
+                         {{ form.participant_name.errors.as_text }}
+                        <br />
+                    {% endfor %}
+                </p>
+            </div>
+            <div id="birth_date">
+                <p><strong>Birth Date</strong></p>
+                <p>
+                    {% for form, participant in formset_and_participants %}
+                        {{ participant }}:
+                         {{ form.birth_date }}
+                         {{ form.birth_date.errors.as_text }}
+                        <br />
+                    {% endfor %}
+                </p>
+            </div>
+            <div id="height">
+                <p><strong>Height</strong></p>
+                <p>
+                    {% for form, participant in formset_and_participants %}
+                        {{ participant }}:
+                         {{ form.height }}
+                         {{ form.height.errors.as_text }}
+                        <br />
+                    {% endfor %}
+                </p>
+            </div>
+            <div id="weight">
+                <p><strong>Weight</strong></p>
+                <p>
+                    {% for form, participant in formset_and_participants %}
+                        {{ participant }}:
+                         {{ form.weight }}
+                         {{ form.weight.errors.as_text }}
+                        <br />
+                    {% endfor %}
+                </p>
+            </div>
+            <div id="Gender">
+                <p><strong>Gender</strong></p>
+                <p>
+                    {% for form, participant in formset_and_participants %}
+                        {{ participant }}:
+                         {{ form.gender }}
+                         {{ form.gender.errors.as_text }}
+                        <br />
+                    {% endfor %}
+                </p>
+            </div>
+        </div>
 
-        <p><strong>Heel Holds</strong></p>
-        <p>
-            {% for form, participant in formset_and_participants %}
-                {{ participant }}:
-                 {{ form.num_sidewalkers_walk_heel_hold }}
-                <br />
-            {% endfor %}
-        </p>
+        <div id="Premounted">
+            <h2>Premounted</h2>
+            <div id="posture">
+                <h3>Posture</h3>
+                <div id="standing_posture">
+                    <p><strong>Standing</strong></p>
+                    <p>
+                        {% for form, participant in formset_and_participants %}
+                            {{ participant }}:
+                             {{ form.posture_standing }}
+                             {{ form.posture_standing.errors.as_text }}
+                            <br />
+                        {% endfor %}
+                    </p>
+                </div>
+                <div id="sitting_posture">
+                    <p><strong>Sitting</strong></p>
+                    <p>
+                        {% for form, participant in formset_and_participants %}
+                            {{ participant }}:
+                             {{ form.posture_sitting }}
+                             {{ form.posture_sitting.errors.as_text }}
+                            <br />
+                        {% endfor %}
+                    </p>
+                </div>
+                <div id="mounted_posture">
+                    <p><strong>Mounted</strong></p>
+                    <p>
+                        {% for form, participant in formset_and_participants %}
+                            {{ participant }}:
+                             {{ form.posture_mounted }}
+                             {{ form.posture_mounted.errors.as_text }}
+                            <br />
+                        {% endfor %}
+                    </p>
+                </div>
+            </div>
+            <div id="ambulatory">
+                <div id="ambulatory_status">
+                    <p><strong>Ambulatory Status</strong></p>
+                    <p>
+                        {% for form, participant in formset_and_participants %}
+                            {{ participant }}:
+                             {{ form.ambulatory_status }}
+                             {{ form.ambulatory_status.errors.as_text }}
+                             {{ form.ambulatory_status_other }}
+                             {{ form.ambulatory_status_other.errors.as_text }}
+                            <br />
+                        {% endfor %}
+                    </p>
+                </div>
+                <div id="gait">
+                    <h2>Gait</h2>
+                    <div id="gait_flat">
+                        <p><strong>Flat</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_flat }}
+                                 {{ form.gait_flat.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_uneven">
+                        <p><strong>Uneven</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_uneven }}
+                                 {{ form.gait_uneven.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_incline">
+                        <p><strong>Incline</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_incline }}
+                                 {{ form.gait_incline.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_decline">
+                        <p><strong>Decline</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_decline }}
+                                 {{ form.gait_decline.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_stairs">
+                        <p><strong>Stairs</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_stairs }}
+                                 {{ form.gait_stairs.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_balance">
+                        <p><strong>Balance</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_balance }}
+                                 {{ form.gait_balance.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_standing_up">
+                        <p><strong>Standing Up</strong></p>
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_standing_up }}
+                                 {{ form.gait_standing_up.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                    <div id="gait_standing_down">
+                        <p><strong>Standing Down <span style="color:red">NAMING IS A THING</span></strong></p> <!-- Um... lah? -->
+                        <p>
+                            {% for form, participant in formset_and_participants %}
+                                {{ participant }}:
+                                 {{ form.gait_standing_down }}
+                                 {{ form.gait_standing_down.errors.as_text }}
+                                <br />
+                            {% endfor %}
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <p><strong>Spotters</strong></p>
-        <p>
-            {% for form, participant in formset_and_participants %}
-                {{ participant }}:
-                 {{ form.num_sidewalkers_walk_spotter }}
-                <br />
-            {% endfor %}
-        </p>
+        <div id="sidewalkers_required">
+            <h2>Number of Sidewalkers Required</h2>
+            <div id="walking">
+                <h3>Walking</h3>
+                <div id="heel_holds_walk">
+                    <p><strong>Heel Holds</strong></p>
+                    <p>
+                        {% for form, participant in formset_and_participants %}
+                            {{ participant }}:
+                             {{ form.num_sidewalkers_walk_heel_hold }}
+                             {{ form.num_sidewalkers_walk_heel_hold.errors.as_text }}
+                            <br />
+                        {% endfor %}
+                    </p>
+                </div>
+                <div id="spotters_walk">
+                    <p><strong>Spotters</strong></p>
+                    <p>
+                        {% for form, participant in formset_and_participants %}
+                            {{ participant }}:
+                             {{ form.num_sidewalkers_walk_spotter }}
+                             {{ form.num_sidewalkers_walk_spotter.errors.as_text }}
+                            <br />
+                        {% endfor %}
+                    </p>
+                </div>
+            </div>
+        </div>
 
         <input type="hidden" name="save_form" value="True" />
 
