[re #46] Added an @login_required in views and added a submit button in .html file

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
@@ -464,5 +464,6 @@
                 {{ form.comments.errors.as_text }}
             </span>
         </p>
+        <input type="Submit" value="Submit" />
     </form>
 {% endblock %}
