[Re #44] Cleaned up session_plan.html pt 3

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
@@ -130,5 +130,8 @@
                 {{ form.motivation.errors.as_text }}
             </span>
         </p>
+        <p>
+            <input type="submit" value="Submit" />
+        </p>
     </form>
 {% endblock %}
