[Re #44] Added closing '%' in opeing <form> tag.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
@@ -6,7 +6,7 @@
         {{ error_text }}
     </strong></p>
     {% endif %}
-    <form action="{% url 'private-form-session-plan'}" method="post">
+    <form action="{% url 'private-form-session-plan' %}" method="post">
         {% csrf_token %}
         <p>Participant: {{ form.name }}
             <span class="error_message">
