--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
@@ -6,10 +6,10 @@
             {{ error_text }}
         </strong></p>
     {% endif %}
-    <form action="{% url 'private_form_rider_eval_checklist' %}" method="post">
+    <form action="{% url 'private_form_rider_eval_checklist' participant.participant_id %}" method="post">
         {% csrf_token %}
         <p>
-            Participant: {{ participant }}
+            Participant: {{ participant.name }} ({{ participant.birth_date }})
             <span class="error_message">
                 {{ form.participant.errors.as_text }}
             </span>
