--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -1,4 +1,9 @@
 {% extends "cbar_db/template.html" %}
+{% block header %}
+    {% load staticfiles %}
+    <script src="{% static "cbar_db/js/jquery-1.12.3.js" %}" type="text/javascript"></script>
+    <script src="{% static "cbar_db/js/intake_assessment.js" %}" type="text/javascript"></script>
+{% endblock %}
 {% block body %}
     <h1>Rider Intake Assessment</h1>
     {% if error_text %}
@@ -9,6 +14,14 @@
 
     save_form: {{ save_form }}
     show_form: {{ show_form }}
+
+    <form>
+        <select name="section">
+            <option value="general_information">General Information</option>
+            <option value="premounted">Premounted</option>
+            <option value="sidewalkers_required">Sidewalkers Required</option>
+        </select>
+    </form>
 
     <form action="{% url 'private-form-intake-assessment' %}" method="post">
         {% csrf_token %}
@@ -72,7 +85,7 @@
             </div>
         </div>
 
-        <div id="Premounted">
+        <div id="premounted">
             <h2>Premounted</h2>
             <div id="posture">
                 <h3>Posture</h3>
