[Re #48] Initial implementation of jQuery to show/hide sections of the Rider Intake Assessment.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -16,7 +16,7 @@
     show_form: {{ show_form }}
 
     <form>
-        <select name="section">
+        <select name="section" id="section">
             <option value="general_information">General Information</option>
             <option value="premounted">Premounted</option>
             <option value="sidewalkers_required">Sidewalkers Required</option>
