[Re #44] Modified Session Plan Form to accept a 'particicpant_id' in the URL. Did some cleanup to the Session Plan form.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/session_plan.html
@@ -4,134 +4,129 @@
     {% if error_text %}
     <p><strong>
         {{ error_text }}
+        {{ form.errors }}
+        {{ form.non_field_errors }}
     </strong></p>
     {% endif %}
-    <form action="{% url 'private-form-session-plan' %}" method="post">
-        {% csrf_token %}
-        <p>Participant: {{ form.name }}
-            <span class="error_message">
-                {{ form.name.errors.as_text }}
-            </span>
-            Birth Date: {{ form.birth_date }}
-            <span class="error_message">
-                {{ form.birth_date.errors.as_text }}
-            </span>
-            <br />
-            Horse: {{ form.horse_name }}
-            <span class="error_message">
-                {{ form.name.errors.as_text }}
-            </span>
-            Horse Description: {{ form.description }}
-            <span class="error_message">
-                {{ form.description.errors.as_text }}
-            </span>
-            <br />
-            Tack: {{ form.tack }}
-            <span class="error_message">
-                {{ form.tack.errors.as_text }}
-            </span>
-            <br />
-            Diagnosis: {{ form.diagnosis }}
-            <span class="error_message">
-                {{ form.diagnosis.errors.as_text }}
-            </span>
-            Type: {{ form.diagnosis_type }}
-            <span class="error_message">
-                {{ form.diagnosis_type.errors.as_text }}
-            </span>
-            <br />
-            Mobility: {{ form.ambulatory_status }}
-            <span class="error_message">
-                {{ form.ambulatory_status.errors.as_text }}
-            </span>
-            Mobility (other): {{ form.ambulatory_status_other }}
-            <span class="error_message">
-                {{ form.ambulatory_status_other.errors.as_text }}
-            </span>
-        </p>
+    {% if participant %}
+        <form action="{% url 'private-form-session-plan' participant.participant_id %}" method="post">
+            {% csrf_token %}
+            <p>Participant: {{ participant.name }}<br />
+                Birth Date: {{ participant.birth_date }}<br />
+                Current Date: {{ form.date }}
+                <span class="error_message">
+                    {{ form.date.errors.as_text }}
+                </span>
 
-        <h2>Mounting Notes</h2>
-        <p>Assistance: {{ form.mount_assistance_required }}
-            <span class="error_message">
-                {{ form.mount_assistance_required.errors.as_text }}
-            </span>
-            Mount Device Needed: {{ form.mount_device_needed }}
-            <span class="error_message">
-                {{ form.mount_device_needed.errors.as_text }}
-            </span>
-            Mount Type: {{ form.mount_type }}
-            <span class="error_message">
-                {{ form.mount_type.errors.as_text }}
-            </span>
-        </p>
+                Horse: {{ form.horse_name }}
+                <br />
+                Tack: {{ form.tack }}
+                <span class="error_message">
+                    {{ form.tack.errors.as_text }}
+                </span>
+                <br />
+                Diagnosis: {{ form.diagnosis }}
+                <span class="error_message">
+                    {{ form.diagnosis.errors.as_text }}
+                </span>
+                Type: {{ form.diagnosis_type }}
+                <span class="error_message">
+                    {{ form.diagnosis_type.errors.as_text }}
+                </span>
+                <br />
+                Mobility: {{ form.ambulatory_status }}
+                <span class="error_message">
+                    {{ form.ambulatory_status.errors.as_text }}
+                </span>
+                Mobility (other): {{ form.ambulatory_status_other }}
+                <span class="error_message">
+                    {{ form.ambulatory_status_other.errors.as_text }}
+                </span>
+            </p>
 
-        <h2>Dismounting Notes</h2>
-        <p>Assistance: {{ form.dismount_assistance_required }}
-            <span class="error_message">
-                {{ form.dismount_assistance_required.errors.as_text }}
-            </span>
-            Dismount Type: {{ form.dismount_type }}
-            <span class="error_message">
-                {{ form.dismount_type.errors.as_text }}
-            </span>
-        </p>
+            <h2>Mounting Notes</h2>
+            <p>Assistance: {{ form.mount_assistance_required }}
+                <span class="error_message">
+                    {{ form.mount_assistance_required.errors.as_text }}
+                </span>
+                Mount Device Needed: {{ form.mount_device_needed }}
+                <span class="error_message">
+                    {{ form.mount_device_needed.errors.as_text }}
+                </span>
+                Mount Type: {{ form.mount_type }}
+                <span class="error_message">
+                    {{ form.mount_type.errors.as_text }}
+                </span>
+            </p>
 
-        <h2>Sidewalkers</h2>
-        <p><strong>At walk:</strong>
-            <br />
-            Spotter: {{ form.num_sidewalkers_walk_spotter }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_walk_spotter.errors.as_text }}
-            </span>
-            Heelhold: {{ form.num_sidewalkers_walk_heel_hold }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_walk_heel_hold.errors.as_text }}
-            </span>
-            Over Thigh: {{ form.num_sidewalkers_walk_over_thigh }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_walk_over_thigh.errors.as_text }}
-            </span>
-            Other: {{ form.num_sidewalkers_walk_other }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_walk_other.errors.as_text }}
-            </span>
-            <br />
-            <strong>At Trot:</strong>
-            <br />
-            Spotter: {{ form.num_sidewalkers_trot_spotter }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_trot_spotter.errors.as_text }}
-            </span>
-            Heelhold: {{ form.num_sidewalkers_trot_heel_hold }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_trot_heel_hold.errors.as_text }}
-            </span>
-            Over Thigh: {{ form.num_sidewalkers_trot_over_thigh }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_trot_over_thigh.errors.as_text }}
-            </span>
-            Other: {{ form.num_sidewalkers_trot_other }}
-            <span class="error_message">
-                {{ form.num_sidewalkers_trot_other.errors.as_text }}
-            </span>
-        </p>
+            <h2>Dismounting Notes</h2>
+            <p>Assistance: {{ form.dismount_assistance_required }}
+                <span class="error_message">
+                    {{ form.dismount_assistance_required.errors.as_text }}
+                </span>
+                Dismount Type: {{ form.dismount_type }}
+                <span class="error_message">
+                    {{ form.dismount_type.errors.as_text }}
+                </span>
+            </p>
 
-        <h2>Session Goals</h2>
-        <p>Goal Type: {{ form.goal_type }}
-            <span class="error_message">
-                {{ form.goal_type.errors.as_text }}
-            </span>
-            Description: {{ form.goal_description }}
-            <span class="error_message">
-                {{ form.goal_description.errors.as_text }}
-            </span>
-            Motivation: {{ form.motivation }}
-            <span class="error_message">
-                {{ form.motivation.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            <input type="submit" value="Submit" />
-        </p>
-    </form>
+            <h2>Sidewalkers</h2>
+            <p><strong>At walk:</strong>
+                <br />
+                Spotter: {{ form.num_sidewalkers_walk_spotter }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_walk_spotter.errors.as_text }}
+                </span>
+                Heelhold: {{ form.num_sidewalkers_walk_heel_hold }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_walk_heel_hold.errors.as_text }}
+                </span>
+                Over Thigh: {{ form.num_sidewalkers_walk_over_thigh }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_walk_over_thigh.errors.as_text }}
+                </span>
+                Other: {{ form.num_sidewalkers_walk_other }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_walk_other.errors.as_text }}
+                </span>
+                <br />
+                <strong>At Trot:</strong>
+                <br />
+                Spotter: {{ form.num_sidewalkers_trot_spotter }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_trot_spotter.errors.as_text }}
+                </span>
+                Heelhold: {{ form.num_sidewalkers_trot_heel_hold }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_trot_heel_hold.errors.as_text }}
+                </span>
+                Over Thigh: {{ form.num_sidewalkers_trot_over_thigh }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_trot_over_thigh.errors.as_text }}
+                </span>
+                Other: {{ form.num_sidewalkers_trot_other }}
+                <span class="error_message">
+                    {{ form.num_sidewalkers_trot_other.errors.as_text }}
+                </span>
+            </p>
+
+            <h2>Session Goals</h2>
+            <p>Goal Type: {{ form.goal_type }}
+                <span class="error_message">
+                    {{ form.goal_type.errors.as_text }}
+                </span>
+                Description: {{ form.goal_description }}
+                <span class="error_message">
+                    {{ form.goal_description.errors.as_text }}
+                </span>
+                Motivation: {{ form.motivation }}
+                <span class="error_message">
+                    {{ form.motivation.errors.as_text }}
+                </span>
+            </p>
+            <p>
+                <input type="submit" value="Submit" />
+            </p>
+        </form>
+    {% endif %}
 {% endblock %}
