[Re #67] Added an '@property' method to the Participant model to convert height back to ft'in" format for display in templates

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -59,7 +59,7 @@
                 <strong>Birth Date</strong><br /> {{ participant.birth_date }}
             </div>
             <div class="floating_block">
-                <strong>Height</strong><br /> {{ participant.height }}" <!-- Convert this to Ft'In"" -->
+                <strong>Height</strong><br /> {{ participant.height_in_feet_and_inches }}
             </div>
             <div class="floating_block">
                 <strong>Weight</strong><br /> {{ participant.weight }} lb
