[re #46] Changed drop down boxes into radio buttons for rider evaluation checklist form. Made the necessary changes to forms.py, models.py, and template
Resolves Issue #64

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/rider_eval_checklist_form.html
@@ -1,4 +1,11 @@
 {% extends "cbar_db/template.html" %}
+{% block header %}
+<style>
+  li{
+    display:inline-block;
+  }
+</style>
+{% endblock %}
 {% block body %}
     <h1>Rider Evaluation Checklist</h1>
     {% if error_text %}
